--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "scripts": {
-    "dev": "vuepress dev docs",
-    "build": "vuepress build docs"
-  },
-  "devDependencies": {
-    "vuepress": "^1.0.1"
-  }
+	"homepage": "https://genghh.github.io",
+	"scripts": {
+		"dev": "vuepress dev docs",
+		"build": "vuepress build docs"
+	},
+	"devDependencies": {
+		"vuepress": "^1.0.1"
+	}
 }
