--- a/.github/workflows/azure-webapps-node.yml
+++ b/.github/workflows/azure-webapps-node.yml
@@ -10,10 +10,13 @@ jobs:
       - name: Checkout
         uses: actions/checkout@master
 
+      - name: Install and Build 🔧
+        run: |
+          npm install && npm run build
+
       - name: Build and Deploy
         uses: JamesIves/github-pages-deploy-action@v4.2.5
         with:
           ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
           BRANCH: master
           FOLDER: docs/.vuepress/dist
-          BUILD_SCRIPT: npm install && npm run build
