--- a/.github/workflows/azure-webapps-node.yml
+++ b/.github/workflows/azure-webapps-node.yml
@@ -12,7 +12,8 @@ jobs:
 
       - name: Install and Build 🔧
         run: |
-          npm install && npm run build
+          npm install
+          npm run build
 
       - name: Build and Deploy
         uses: JamesIves/github-pages-deploy-action@v4.2.5
